k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  namespace: petclinic-docker 
spec:
  selector:
    matchLabels:
      app: petclinic
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
      - name: petclinic-docker1
        image: 885491079534.dkr.ecr.us-east-2.amazonaws.com/petclinic-docker:number
        ports:
        - containerPort: 80
