k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-svc
  namespace: petclinic-docker
spec:
  selector:
    app: petclinic
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
